# open-earable-2

./: .gitignore  CMakeLists.txt  CMakePresets.json  Kconfig  Kconfig.defaults  POWER_DESCRIPTION.md  README.md  SYSTEM_DESCRIPTION.md  VERSION  change_to_button.text  flash.sh  index.rst  nrf5340_audio_dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf  prj_fota.conf  prj_release.conf  sysbuild_fota.conf  uart_console.overlay  west.yml
child_image/: hci_ipc.conf  (+1 more)
src/SensorManager/: ANCDamping.cpp  ANCDamping.h  Baro.cpp  Baro.h  BoneConduction.cpp  BoneConduction.h  CMakeLists.txt  EdgeMLSensor.h  ExG.cpp  ExG.h  IMU.cpp  IMU.h  Kconfig  MicBleStreamer.cpp  MicBleStreamer.h  Microphone.c  Microphone.cpp  Microphone.h  MicrophoneBle.cpp  MicrophoneBle.h  PPG.cpp  PPG.h  PPG_left_I2C1.cpp  PPG_left_I2C1.h  PPG_left_I2C3.cpp  PPG_left_I2C3.h  PPG_right_I2C2.cpp  PPG_right_I2C2.h  SensorManager.c  SensorManager.cpp  SensorManager.h  Temp.cpp  Temp.h  Temp_left_I2C1.cpp  Temp_left_I2C1.h  Temp_left_I2C3.cpp  Temp_left_I2C3.h  Temp_right_I2C2.cpp  Temp_right_I2C2.h
src/SensorManager/AD7124/: AD7124.cpp  AD7124.h  CMakeLists.txt
src/SensorManager/Adafruit_BusIO/: Adafruit_BusIO_Register.cpp  Adafruit_BusIO_Register.h  Adafruit_I2CDevice.h  CMakeLists.txt
src/SensorManager/Adafruit_Unified_Sensor/: Adafruit_Sensor.cpp  Adafruit_Sensor.h  CMakeLists.txt
src/drivers/: ADAU1860.cpp  ADAU1860.h  CMakeLists.txt  Kconfig  Lark-eq.c  Lark-fdsp copy 2.c  Lark-fdsp copy 3.c  Lark-fdsp copy.c  Lark-fdsp.c  SSM6515.cpp  SSM6515.h  adau1860_orig.c  adau1860_orig.h
(+271 files in other folders)
